tools/tests/errors/random_choices_negative_k.experr
k must be non-negative
